Add : console clear

--- a/index.html
+++ b/index.html
@@ -23,4 +23,5 @@
         </div>
     </div>
 <script src="./script/index.js" type="text/babel"></script>
+<script>console.clear()</script>
 </body>
